--- a/vueclient/index.html
+++ b/vueclient/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>成本报表</title>
+    <title>同步状态查询</title>
   </head>
   <body>
     <div id="app"></div>
